@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.tools.launchers;
@@ -67,7 +56,14 @@ final class SystemJvmOptions {
              * Due to internationalization enhancements in JDK 9 Elasticsearch need to set the provider to COMPAT otherwise time/date
              * parsing will break in an incompatible way for some date patterns and locales.
              */
-            "-Djava.locale.providers=SPI,COMPAT"
+            "-Djava.locale.providers=SPI,COMPAT",
+            /*
+             * Temporarily suppress illegal reflective access in searchable snapshots shared cache preallocation; this is temporary while we
+             * explore alternatives. See org.elasticsearch.xpack.searchablesnapshots.preallocate.Preallocate.
+             *
+             * TODO: either modularlize Elasticsearch so that we can limit the opening of this module, or find an alternative
+             */
+            "--add-opens=java.base/java.io=ALL-UNNAMED"
         ).stream().filter(e -> e.isEmpty() == false).collect(Collectors.toList());
     }
 
